fixed overflow for user-voices-card-container

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
